--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:name=".DetailsActivity"
             android:exported="false"
             android:label="@string/title_activity_details"
-            android:theme="@style/AppTheme"
+            android:theme="@style/AppTheme.Details"
             android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".MainActivity"
